Bug 317432 - Opening a .kilepr file from "File|Open recent" menu opens it as "text" (in editor) instead of as a "kile project"
Summary: Opening a .kilepr file from "File|Open recent" menu opens it as "text" (in ed...
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: user interface (other bugs)
Version First Reported In: 2.1.3
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-27 11:14 UTC by A. Sala
Modified: 2016-12-03 20:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description A. Sala 2013-03-27 11:14:32 UTC
Confusing user interface issue: we have "Project|open recent project" and "File|open recent".

Recently opened .kilepr appear both in the recent "File" and in the "Project" menus.

Perhaps they should appear only in the recent "project" menu. 

If somebody wants to edit them as text to manually tweak the configuration (not recommended!) I guess that it should also be in the "Project" menu (edit project file as text)... or even be absent: the ones which would like to do that are usually happy with editing them in their text editor of choice opening them from outside kile.

Reproducible: Always

Steps to Reproduce:
1. Work with a project and close it.
2. Go to File|Recent projects and select it.

Actual Results:  
It appears in editor as text.

Expected Results:  
Kile should have understood that it is a project and opened it as such... or, actually, it should never have been in the "recent files" menu in first place.

Workaround: open the file from in "recent projects" menu.
Comment 1 merlin 2013-11-13 20:01:33 UTC
I have sent a patch, which solves this problem,  to the maintainer of Kile (Michel Ludwig) to commit it.
Comment 2 Michel Ludwig 2013-11-20 10:45:07 UTC
Sorry, but your patch doesn't seem like the right fix.

Can you maybe check why the project files are added to the recent-files menu entry? This should not happen...

Also, I cannot seem to reproduce this bug with the master branch in git.
Comment 3 A. Sala 2013-11-20 11:53:37 UTC
I confirm this is reproduced with my copy of kile 2.1.3, on kde 4.11.3 (from kubuntu ppa) on a different machine from which I reported the bug.

My comment is, perhaps, contrary to Michel's opinion: it "should" appear on the File menu (let's say that most applications place "recently opened <things>" in the file menu, so this is the first place an average user looks into --that's what I did--).

Of course, if it wasn't there perhaps I would have looked elsewhere (on the project->recent projects menu, I reckon!-) ), so it's a matter of user interface choice.

So my suggestion is that, as a .kilepr project is actually a "file" anyway (albeit a special one), it must be clearly documented that they do appear on the "file|recent" menu (or set up as an user-configurable option " [bool] show recent projects on the recent files list"), and, simply, adding the "patch" that if the "thing to open" is a ".kilepr" then don't open it as text but as a project.
Comment 4 Michel Ludwig 2016-12-03 20:26:30 UTC
Git commit a084c719784461cc07d099cc997a2e41c8ffa17b by Michel Ludwig.
Committed on 03/12/2016 at 20:26.
Pushed by mludwig into branch 'master'.

Open project files correctly as projects when selected in the Open File dialog

M  +10   -3    src/kiledocmanager.cpp

https://commits.kde.org/kile/a084c719784461cc07d099cc997a2e41c8ffa17b