Open project files correctly as projects when selected in the Open File dialog

BUG: 317432